syntax = "proto3";

option csharp_namespace = "Message";

package Message;

service Broker {
	rpc Dispatch (stream ActionMessage) returns (stream ResponseMessage);
}

message ActionMessage {
	oneof action {
		SendProbe probe = 1; 
		SendRequest request = 2;
		Empty empty = 3;
	}
}

message SendRequest {
	string id = 1;
	string content = 3;
}

message SendProbe {
	string id = 1;
	string node = 2;
	string content = 3;
	string timestamp = 4;
}

message Empty {
	string id = 1;
	string timestamp = 2;
}
 
message ResponseMessage {
	oneof response {
		ProbeResponse probe = 1; 
		RequestResponse request = 2;
	}
}

message ProbeResponse {
	string id = 1;
	string node = 2;
}

message RequestResponse {
	string id = 1;
	string node = 2;
	string response = 3;
}